[package]
name = "mutate4rs"
version = "0.1.0"
edition = "2024"
description = "Rust mutation testing prototype inspired by mutate4java"
license = "MIT"
repository = "https://github.com/example/mutation-libraries"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
